# spectool

./: .gitignore  LICENSE  README.md
dataset/autobench/: 116.c
dataset/live24/: 21176_BL.EN.U4CSE21176_1.c  21176_BL.EN.U4CSE21176_14.c  21176_BL.EN.U4CSE21176_2.c  21176_BL.EN.U4CSE21176_22.c  21176_BL.EN.U4CSE21176_3.c  21176_BL.EN.U4CSE21176_4.c  21176_BL.EN.U4CSE21176_4a.c  21176_BL.EN.U4CSE21176_8.c  21176_LogicFunction2.c  MarcoGrillo_Minimum-Period-of-a-String_period.c  Tasmina0609_1.c  X509-parser_bufs_differ.c  X509-parser_check_ia5_string.c  X509-parser_parse_null.c  X509-parser_time_components_to_comparable_u64.c  X509-parser_verify_correct_time_use.c  accumulate.c  adjacent_difference.c  adjacent_find.c  arepina_abs_impletentation.c  arepina_average.c  arepina_distance.c  arepina_distance_abs.c  arepina_factorial.c  arepina_lower_bound.c  arepina_lower_bound_raw.c  arepina_reverse.c  arepina_sign.c  array_double.c  arrays_and_loops_1.c  arrays_and_loops_2.c  arrays_and_loops_3.c  arrays_and_loops_4.c  arrays_and_loops_5.c  axiom_pop_of_push.c  axiom_push_of_pop_top.c  axiom_size_of_init.c  axiom_size_of_pop.c  axiom_size_of_push.c  axiom_top_of_push.c  (+233 more)
dataset/live25/: array-cav19_array_tiling_tcpy.c  (+348 more)
scripts/: slice.py  test_check_admit.py
spectool/: SKILL.md  pyproject.toml
spectool/CLI/: __init__.py  __main__.py  cli.py  io.py  registry.py
spectool/CLI/commands/: __init__.py  check_admit.py  doctor.py  extract.py  fill_contracts.py  init_contracts.py  inject.py  list_functions.py  list_layers.py  locate_fail.py  save_contract.py  slice.py  verify.py
(+3 files in other folders)
